force-app/main/default/objects/Commission__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>7</length>
    <type>Text</type>
</CustomField>