force-app/main/default/objects/Commission__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions_SalesRep</relationshipName>
    <type>Lookup</type>
</CustomField>