force-app/main/default/objects/Commission__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calculada</fullName>
                <default>true</default>
                <label>Calculada</label>
            </value>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
            <value>
                <fullName>Paga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>