force-app/main/default/objects/Commission__c/validationRules/Negative_Rate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Rate_Validation</fullName>
    <active>true</active>
    <description>Taxa de comissão não pode ser negativa.</description>
    <errorConditionFormula>Commission_Rate__c &lt; 0</errorConditionFormula>
    <errorMessage>A taxa de comissão não pode ser negativa.</errorMessage>
</ValidationRule>